<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mainBaseFragment"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/main_fragment" />
    <item
        android:id="@+id/categoryFragment"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/categories" />
    <item
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/favorites" />
    <item
        android:id="@+id/cartOrderFragment"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        android:title="@string/cart" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile" />

</menu>